--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="./favicon.png">
-  <title>Runner (Web)</title>
+  <title>Maze Knight</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
