--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="./favicon.png">
-  <title>Maze Knight</title>
-  <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-  <canvas id="game" width="800" height="800"></canvas>
-  <script src="./game.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Maze Knight</title>
+    <meta http-equiv="refresh" content="0; url=/web/">
+    <style>
+      body {
+        margin: 0;
+        display: flex;
+        min-height: 100vh;
+        align-items: center;
+        justify-content: center;
+        font-family: Arial, sans-serif;
+        background: #0f1115;
+        color: #e6edf3;
+      }
+      a {
+        color: #8af6ff;
+      }
+    </style>
+  </head>
+  <body>
+    <p>Redirecting to <a href="/web/">Maze Knight</a>...</p>
+  </body>
 </html>
